--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.31.0",
+    "@bull-board/api": "^6.18.2",
+    "@bull-board/express": "^6.18.2",
+    "@bull-board/nestjs": "^6.18.2",
     "@nestjs/bullmq": "^10.2.2",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
